# nertc-iot-demo

./: README.md
esp32/: .gitignore  CMakeLists.txt  build.ps1  build.py  build.sh  config.py
esp32/components/anim-emoji-gif/: CMakeLists.txt  idf_component.yml
esp32/components/anim-emoji-gif/include/: lz4_auto.h
esp32/components/anim-emoji-gif/src/: lz4_auto.c
esp32/components/anim-emoji-gif/src/lz4/: 2.7_gif2rgb565_lz4.py
esp32/components/anim-emoji-gif/src/lz4/eye1/: angry.lz4  crying.lz4  happy.lz4  loving.lz4  mute.lz4  sleepy.lz4  surprised.lz4  thinking.lz4  wifi.lz4  winking.lz4
esp32/components/anim-emoji-gif/src/lz4/eye2/: call.lz4  confused.lz4  crying.lz4  embarrassed.lz4  happy.lz4  sleepy.lz4  surprised.lz4  thinking.lz4  winking.lz4
esp32/components/anim-emoji-gif/src/lz4/eye2_160/: confused.lz4  embarrassed.lz4  happy.lz4  loving.lz4  mute.lz4  sleepy.lz4  surprised.lz4  thinking.lz4  wifi.lz4  winking.lz4
esp32/components/anim-emoji-gif/src/lz4/eye3/: confused.lz4  crying.lz4  embarrassed.lz4  loving.lz4  mute.lz4  star.lz4  thinking.lz4
esp32/components/anim-emoji-gif/src/lz4/eye3_160/: embarrassed.lz4  sleepy.lz4  wifi.lz4
esp32/components/anim-emoji-gif/src/lz4/otto/: anger.lz4  sad.lz4
esp32/create_local_config/: config.json.c3  readme.txt
esp32/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  application_nertc.cc  background_task.cc  background_task.h  idf_component.yml  mcp_server.cc  mcp_server.h  ota.cc  system_info.h
esp32/nertc_demo/: .gitignore  CMakeLists.txt  (+5 more)
sf32/: .gitignore  README.md
(+141 files in other folders)
